--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<wrong typo to check for lint working or not>
 <head>
 	<title>Udacity Cloud DevOps Engineer Nanodegree Program</title>
 </head>
